--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -2,25 +2,22 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".MainActivity">
     <item
-        android:id="@+id/action_settings"
-        android:orderInCategory="100"
-        android:title="@string/action_settings" />
-    <item
-        android:id="@+id/action_login"
-        android:title="@string/action_login" />
+        android:id="@+id/action_message"
+        android:title="@string/action_message"/>
     <item
         android:id="@+id/action_my_schedule"
         android:title="@string/action_my_schedule"/>
+    <item android:id="@+id/action_account"
+        android:title="我"/>
     <item
         android:id="@+id/action_allteam"
         android:title="团队"/>
-    <item
-        android:id="@+id/action_message"
-        android:title="@string/action_message"/>
     <item android:id="@+id/action_shop"
-        android:title="测试商店"/>
-    <item android:id="@+id/action_account"
-        android:title="账户信息"/>
+        android:title="附近"/>
+    <item
+        android:id="@+id/action_settings"
+        android:orderInCategory="100"
+        android:title="@string/action_settings" />
     <item android:id="@+id/action_sos"
         android:title="@string/action_sos"/>
     <item android:id="@+id/action_feedback"
