--- a/app/src/main/res/layout/activity_schedule_actionbar.xml
+++ b/app/src/main/res/layout/activity_schedule_actionbar.xml
@@ -13,16 +13,6 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:textColor="#fff"
         android:textStyle="bold" />
-
-    <ImageView
-        android:id="@+id/imageView1"
-        android:layout_width="35dp"
-        android:layout_height="35dp"
-        android:layout_alignParentLeft="true"
-        android:layout_centerVertical="true"
-        android:layout_marginLeft="8dp"
-        android:src="@android:drawable/ic_menu_my_calendar" />
-
     <ImageButton
         android:id="@+id/imageButton"
         android:layout_width="wrap_content"
@@ -32,5 +22,12 @@
         android:layout_marginRight="8dp"
         android:background="@null"
         android:src="@android:drawable/ic_menu_add" />
-
+    <ImageButton
+        android:id="@+id/backbutton"
+        android:layout_width="35dp"
+        android:layout_height="35dp"
+        android:layout_alignParentLeft="true"
+        android:layout_centerVertical="true"
+        android:layout_marginLeft="8dp"
+        android:src="@android:drawable/ic_menu_my_calendar" />
 </RelativeLayout>
