修正了主页的bug
修正了message的bug以及调整了按钮位置

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,17 +8,7 @@
     <com.amap.api.maps.MapView
         android:id="@+id/map"
         android:layout_width="match_parent"
-        android:layout_height="560dp" />
-
-    <Button
-            android:id="@+id/sos"
-            android:layout_width="53dp"
-            android:layout_height="wrap_content"
-            android:background="#492b61cc"
-            android:text="@string/sos"
-            android:textColor="#ffeff2ff"
-            android:layout_marginBottom="189dp"
-        android:layout_gravity="right|top" />
+        android:layout_height="match_parent" />
 
     <EditText
             android:id="@+id/find"
@@ -30,6 +20,15 @@
             android:layout_marginRight="10dp"
 
         android:layout_gravity="center_horizontal|top" />
+
+    <Button
+            android:id="@+id/sos"
+            android:layout_width="53dp"
+            android:layout_height="wrap_content"
+            android:background="#492b61cc"
+            android:text="@string/sos"
+            android:textColor="#ffeff2ff"
+        android:layout_gravity="left|bottom" />
 
 
 </FrameLayout>
