--- a/app/src/main/res/layout/activity_message_list_item.xml
+++ b/app/src/main/res/layout/activity_message_list_item.xml
@@ -19,35 +19,11 @@
         <com.socialmap.yy.travelbox.ui.MessageDialogBox
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
-    <LinearLayout
-                 android:layout_width="wrap_content"
-                 android:layout_height="wrap_content"
-                 android:orientation="vertical" >
-                 <CheckBox
-                     android:id="@+id/checkBox2"
-                     android:layout_width="wrap_content"
-                     android:layout_height="wrap_content"
-                     android:text="红色" />
-
-                 <CheckBox
-                     android:id="@+id/checkBox3"
-                     android:layout_width="wrap_content"
-                     android:layout_height="wrap_content"
-                     android:text="绿色" />
-
-                 <CheckBox
-                     android:id="@+id/checkBox1"
-                     android:layout_width="wrap_content"
-                     android:layout_height="wrap_content"
-                     android:text="蓝色" />
-             </LinearLayout>
-
-
 
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="80dp"
+            android:layout_height="94dp"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="5dp"
             android:layout_marginTop="5dp"
@@ -65,7 +41,8 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="To be or not to be, that is a question." />
+                android:text="To be or not to be, that is a question."
+                />
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
