--- a/app/src/main/res/layout/nearby_header.xml
+++ b/app/src/main/res/layout/nearby_header.xml
@@ -20,7 +20,7 @@
         android:background="@drawable/search_panel_background"
         >
 
-        <Button
+        <EditText
             android:textAppearance="?android:textAppearanceMedium"
             android:gravity="left|center"
             android:background="@android:drawable/edit_text"
