--- a/app/src/main/res/layout/activity_history.xml
+++ b/app/src/main/res/layout/activity_history.xml
@@ -77,7 +77,7 @@
             android:paddingRight="5dp"
             android:paddingLeft="5dp"
             android:singleLine="true"
-            android:text="常州恐龙园"
+            android:text="测试数据"
             android:textSize="20sp" />
 
     </RelativeLayout>
