--- a/app/src/main/res/layout/main_tab_setting.xml
+++ b/app/src/main/res/layout/main_tab_setting.xml
@@ -3,11 +3,11 @@
     android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent">
-    <com.kingbird.test1.CornerListView android:id="@+id/setting_list"
+    <ListView android:id="@+id/setting_list"
         android:layout_width="fill_parent" 
         android:layout_height="wrap_content"
         android:layout_margin="10dip"
         android:background="@drawable/corner_list_bg"
         android:cacheColorHint="#00000000">
-    </com.kingbird.test1.CornerListView>
+    </ListView>
 </LinearLayout>
