--- a/app/src/main/res/layout/activity_message.xml
+++ b/app/src/main/res/layout/activity_message.xml
@@ -14,6 +14,10 @@
         android:textColor="#ffeff2ff"
         android:layout_gravity="right" />
 
+    <TextView android:id="@+id/TextView01"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="测试"></TextView>
     <ListView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
