--- a/app/src/main/res/layout/activity_nearby.xml
+++ b/app/src/main/res/layout/activity_nearby.xml
@@ -13,7 +13,8 @@
         android:background="@drawable/title_background"
         android:gravity="center_vertical"
         android:paddingRight="10px"
-        android:paddingLeft="10px">
+        android:paddingLeft="10px"
+        >
 
         <TextView
             android:textAppearance="?android:textAppearanceMedium"
