--- a/app/src/main/res/layout/activity_schedule.xml
+++ b/app/src/main/res/layout/activity_schedule.xml
@@ -1,5 +1,5 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/tb_schedule_root"
+    android:id="@+id/root"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -35,15 +35,6 @@
             android:gravity="center_horizontal"
             android:orientation="horizontal"
             >
-
-            <!--<ImageView
-                android:layout_width="10dp"
-                android:layout_height="10dp"
-                android:layout_marginBottom="30dp"
-                android:layout_marginLeft="5dp"
-                android:layout_marginRight="5dp"
-                android:layout_marginTop="30dp"
-                android:background="@drawable/schedule_indicator" />-->
 
         </LinearLayout>
 
