--- a/app/src/main/res/layout/activity_schedule_fragment.xml
+++ b/app/src/main/res/layout/activity_schedule_fragment.xml
@@ -1,5 +1,5 @@
 <ListView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/tb_schedule_list"
+    android:id="@+id/list"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:divider="@color/transparent"
