--- a/app/src/main/res/layout/activity_schedule_local_actionbar.xml
+++ b/app/src/main/res/layout/activity_schedule_local_actionbar.xml
@@ -1,53 +1,67 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="50dp"
-    android:background="#bc273a6d">
+    android:background="#bc286d63">
 
-    <TextView
-        android:id="@+id/title_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAllCaps="true"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textColor="#fff"
-        android:textStyle="bold"
-        android:layout_toRightOf="@+id/cal"
-        android:layout_centerVertical="true"
-        android:text="本地日程管理"/>
-    <ImageButton
-        android:id="@+id/add"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_centerVertical="true"
-        android:layout_marginRight="10dp"
-        android:background="@null"
-        android:src="@android:drawable/ic_menu_add" />
-    <ImageButton
-        android:id="@+id/delete"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="false"
-        android:layout_centerVertical="true"
-        android:layout_toLeftOf="@id/add"
-        android:background="@null"
-        android:src="@android:drawable/ic_menu_delete" />
-    <ImageButton
-        android:id="@+id/edit"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="false"
-        android:layout_centerVertical="true"
-        android:layout_toLeftOf="@id/delete"
-        android:background="@null"
-        android:src="@android:drawable/ic_menu_edit" />
     <ImageButton
         android:id="@+id/cal"
         android:layout_width="35dp"
         android:layout_height="35dp"
-        android:layout_alignParentLeft="false"
+        android:layout_alignParentStart="true"
         android:layout_centerVertical="true"
-        android:layout_marginLeft="8dp"
-        android:src="@android:drawable/ic_menu_my_calendar" />
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
+        android:src="@android:drawable/ic_menu_my_calendar"/>
+
+    <TextView
+        android:id="@+id/title"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:layout_toEndOf="@+id/cal"
+        android:layout_toStartOf="@+id/edit"
+        android:text="本地日程管理"
+        android:textAllCaps="true"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textColor="#fff"
+        android:textStyle="bold"
+        />
+
+    <ImageButton
+        android:id="@+id/edit"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
+        android:layout_toStartOf="@+id/delete"
+        android:background="@null"
+        android:src="@android:drawable/ic_menu_edit"/>
+
+
+    <ImageButton
+        android:id="@+id/delete"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
+        android:layout_toStartOf="@+id/add"
+        android:background="@null"
+        android:src="@android:drawable/ic_menu_delete"/>
+
+    <ImageButton
+        android:id="@+id/add"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_centerVertical="true"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
+        android:background="@null"
+        android:src="@android:drawable/ic_menu_add"/>
+
 </RelativeLayout>
+
