--- a/app/src/main/res/layout/activity_schedule_local_item.xml
+++ b/app/src/main/res/layout/activity_schedule_local_item.xml
@@ -4,15 +4,32 @@
     android:layout_height="wrap_content"
     android:background="#1c00ff00"
     android:orientation="vertical"
-    android:paddingTop="5dp"
     android:paddingLeft="5dp"
-    android:paddingRight="5dp">
+    android:paddingRight="5dp"
+    android:paddingTop="5dp">
 
-    <TextView
-        android:id="@+id/time"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:textColor="@color/gray"/>
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:id="@+id/time"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:textColor="@color/gray"/>
+
+        <CheckBox
+            android:id="@+id/checkbox"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:checked="true"
+            android:layout_alignParentEnd="true"
+            android:clickable="false"
+            android:focusable="false"
+            />
+    </RelativeLayout>
+
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -43,9 +60,4 @@
         android:layout_height="wrap_content"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"/>
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="2dp"
-        android:background="#000"/>
 </LinearLayout>
