--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -1,26 +1,31 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".MainActivity">
+      xmlns:tools="http://schemas.android.com/tools"
+      tools:context=".MainActivity">
     <item
         android:id="@+id/action_message"
         android:title="@string/action_message"/>
     <item
         android:id="@+id/action_my_schedule"
         android:title="@string/action_my_schedule"/>
-    <item android:id="@+id/action_account"
+    <item
+        android:id="@+id/action_account"
         android:title="我"/>
     <item
         android:id="@+id/action_allteam"
         android:title="团队"/>
-    <item android:id="@+id/action_nearby"
+    <item
+        android:id="@+id/action_nearby"
         android:title="附近"/>
-<!--    <item
-        android:id="@+id/action_settings"
-        android:orderInCategory="100"
-        android:title="@string/action_settings" />
-    <item android:id="@+id/action_sos"
-        android:title="@string/action_sos"/>
-    <item android:id="@+id/action_feedback"
-        android:title="@string/action_feedback"/>
--->
+    <item
+        android:id="@+id/action_debug"
+        android:title="调试专用"/>
+    <!--    <item
+            android:id="@+id/action_settings"
+            android:orderInCategory="100"
+            android:title="@string/action_settings" />
+        <item android:id="@+id/action_sos"
+            android:title="@string/action_sos"/>
+        <item android:id="@+id/action_feedback"
+            android:title="@string/action_feedback"/>
+    -->
 </menu>
