--- a/app/src/main/res/layout/arc_menu.xml
+++ b/app/src/main/res/layout/arc_menu.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <merge xmlns:android="http://schemas.android.com/apk/res/android" >
 
-    <com.socialmap.yy.travelbox.arclibrary.ArcLayout
+    <com.socialmap.yy.travelbox.ui.arclibrary.ArcLayout
         xmlns:custom="http://schemas.android.com/apk/res-auto"
         android:id="@+id/item_layout"
         android:layout_width="wrap_content"
